Closed
Bug 140995
Opened 23 years ago
Closed 22 years ago
Freeze after setting as default browser [Win 2000 and XP]
Categories
(SeaMonkey :: UI Design, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: tweakster, Assigned: ssu0262)
References
Details
(Keywords: hang, Whiteboard: fixed1.3)
Attachments
(7 files)
86.98 KB,
image/jpeg
|
Details | |
1.48 KB,
text/plain
|
Details | |
165.75 KB,
text/plain
|
Details | |
63.43 KB,
application/octet-stream
|
Details | |
13.01 KB,
patch
|
jag+mozilla
:
superreview+
asa
:
approval1.3+
|
Details | Diff | Splinter Review |
5.52 KB,
text/plain
|
Details | |
11.77 KB,
application/x-zip-compressed
|
Details |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.9) Gecko/20020412
Debian/0.9.9-6
BuildID: 0.9.9
mozilla is installed on my system and it being used. when adding a new user and
that user logs in for the first time mozilla asks to bedefault browser when
opened. user hits yes, mozilla freezes. tried this a couple of times and it
happened every time. if i hit cancel instead, mozilla works fine.
Reproducible: Always
Steps to Reproduce:
1.log in as user that has never used mozilla
2.open mozilla
3.hit yes when asking to be default browser
Actual Results: mozilla froze
Expected Results: set itself as default browser and continue with normal operation
Comment 1•23 years ago
|
||
I saw some of this bugs already...
Reporter:
Is that a problem if you have admin rights ?
-> Xp APPS
Assignee: Matti → sgehani
Severity: blocker → critical
Component: Browser-General → XP Apps
Keywords: hang
QA Contact: imajes-qa → paw
Comment 2•23 years ago
|
||
System lock whenever I try to change either the "allow..Open unrequested
windows" or set as default browser, it hangs and requires the browser be killed
and re-opened.
Comment 3•23 years ago
|
||
*** Bug 162867 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•23 years ago
|
||
*** Bug 166598 has been marked as a duplicate of this bug. ***
Comment 5•23 years ago
|
||
*** Bug 159592 has been marked as a duplicate of this bug. ***
Comment 6•23 years ago
|
||
*** Bug 173070 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
My problem occured four times. I tried it a second time after it occurred
initially. Then, I rebooted and attempted two more times. It is definitely an
issue with XP not allowing other browsers to be default over Internet Exploder.
I attached 3 files that XP created after the final error. My rights: Administrator
Comment 11•23 years ago
|
||
Same problem exists on WINNT.
Comment 12•23 years ago
|
||
I've experienced the same under Win2K today
Attachment #102430 -
Attachment description: Error file 3 → File 3 of error
Comment 13•23 years ago
|
||
*** Bug 174599 has been marked as a duplicate of this bug. ***
Comment 14•23 years ago
|
||
One of my friends just reported the same. 1.2 beta, win2k with administrator
rights. Hitting "no" on the question and making Mozilla the default browser
through the button in the preferences worked okay.
Comment 15•23 years ago
|
||
*** Bug 161428 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
*** Bug 178946 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
*** Bug 177218 has been marked as a duplicate of this bug. ***
Comment 18•23 years ago
|
||
*** Bug 172562 has been marked as a duplicate of this bug. ***
Comment 19•23 years ago
|
||
*** Bug 167597 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
except for bug 159592, all dupes are for Windows 2000 and XP
Summary: freeze after setting as default browser → Freeze after setting as default browser [Win 2000 and XP]
Comment 21•23 years ago
|
||
*** Bug 181114 has been marked as a duplicate of this bug. ***
Comment 22•23 years ago
|
||
> Hitting "no" on the question and making Mozilla the default
> browser through the button in the preferences worked okay.
It doesn't on my PC. Mozilla freezes (but is not marked as
"not responding" in the task manager) when trying the preferences
button or the popup window. I have admin privileges on my NT
workstation: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.2) Gecko/20021126
Comment 23•23 years ago
|
||
Hello,
I can verify this bug on WinXP Pro running Mozilla 1.2. Mozilla crashes with
hard drive spinning requiring the task to be killed manually.
Comment 24•23 years ago
|
||
Problem on my NT as well. My crude investigation showed a possible conflict
with something in Outlook (Outlook would completely close out while Mozilla was
in a locked state trying to set as default.) No Dr Watson in my case, but TM
shows "Not Responding" and can be killed that way.
NT Version 4.0, Build 1381, SP6.
Outlook 2000 SR-1 9.0.0.4527
Even tried closing all apps (MS Office, Explorer,etc.) with no change.
Comment 25•23 years ago
|
||
*** Bug 183708 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
I've verified that this is still a problem if the old browser version is
removed first, and if everything under c:\program files\mozilla.org have
been removed prior to installation.
Comment 27•23 years ago
|
||
*** Bug 182759 has been marked as a duplicate of this bug. ***
Comment 28•23 years ago
|
||
*** Bug 184049 has been marked as a duplicate of this bug. ***
Comment 29•23 years ago
|
||
*** Bug 185914 has been marked as a duplicate of this bug. ***
Comment 30•23 years ago
|
||
*** Bug 186324 has been marked as a duplicate of this bug. ***
Comment 31•23 years ago
|
||
Since updating Mozilla to the newest build, the problem has ceased. I no longer
have the problem.
Comment 32•23 years ago
|
||
*** Bug 184942 has been marked as a duplicate of this bug. ***
Comment 33•23 years ago
|
||
*** Bug 189616 has been marked as a duplicate of this bug. ***
Comment 34•23 years ago
|
||
XP apps is the correct component for this bug ???
I can confirm that it occurs to me under windows XP.
Regards
Kevin Davies
Comment 35•23 years ago
|
||
*** Bug 191991 has been marked as a duplicate of this bug. ***
Comment 36•23 years ago
|
||
I am now experiencing this with Phoenix/20030210, Mozilla 1.3b, and 1.3a.
Win2k, SP2.
Comment 37•23 years ago
|
||
... and to make it even weirder ...
I just tried to make Opera 7 my default browser, and *IT* locks up!
Netscape 4.8 has no problem setting itself as the default... well, it says it
has no problem, but it doesn't seem to do the job all the way. I can't figure
out how to make 3.04 try and make itself the default.
Comment 38•23 years ago
|
||
OKay, I installed Win2k SP3, and the problem is gone...
Now I want to know what happened. I'm pretty sure this isn't a Mozilla bug
directly...
Updated•23 years ago
|
Flags: blocking1.3?
Comment 39•23 years ago
|
||
I have gotten this error again on 1.3b, WinXP SP1.
This is about the first thing a new user sees, and it gives a very bad
impression of Mozilla -> Nominating as 1.3 blocker.
Comment 42•22 years ago
|
||
Can't reproduce this on my w2k machine, gonna play with someone's XP machine
tomorrow.
Assignee | ||
Comment 43•22 years ago
|
||
for those still running into this problem, can you export the windows registry
for the following keys (after it hangs) and attach the file to this bug? When
exporting the key, please save it as type "Win9x/NT4 Registration Files (*.reg)":
HKEY_CLASSES_ROOT\.htm
HKEY_CLASSES_ROOT\.html
HKEY_CLASSES_ROOT\.jpeg
HKEY_CLASSES_ROOT\.jpg
HKEY_CLASSES_ROOT\.gif
HKEY_CLASSES_ROOT\http
HKEY_CLASSES_ROOT\https
HKEY_CLASSES_ROOT\MozillaHTML
HKEY_CLASSES_ROOT\MozillaGIF
HKEY_CLASSES_ROOT\MozillaJPEG
Comment 44•22 years ago
|
||
One of the dupes mentioned that if you let Mozilla sit for two minutes it'll
actually get out of the "hang" and continue. Can someone confirm this?
Comment 45•22 years ago
|
||
This is NOT a mozilla bug!!! A patch was released for XP (don't know about
2000/NT/etc.) After installing all the patches for windows XP the problem is
gone...everytime. I have tried this on 6 installs of XP on different machines
with different software. Check out microsofts page, think it was a condition of
one of their anti-trust cases; that they make XP play nicer with other browsers!
[sorry I'm not putting a link to the article/update...too busy :(]
I mailed the last person it was assigned to but now it's juggernaut. So there
it is again.
Comment 46•22 years ago
|
||
In reply to comment #45: I *do* have XP Patch Q810565 installed (to be precise,
German XP SP1 with *all* Patches from Windows update), and I can reproduce a
hang (duration > 3 minutes) in the following two ways:
1. In Mozilla, select Preferences -> Advanced -> System, activate "Alert me if
other programs change these settings", Press OK -> HANG
2. In Control Panel -> Internet Options -> Programs, activate "Check for IE as
standard browser", start IE and select it as standard browser. Start Mozilla
results in the prompt "Do you want to make Mozilla the default browser" again.
Select Yes -> HANG
During the hang, there is no noticeable CPU consumption by Mozilla.
Comment 47•22 years ago
|
||
Additional information: this is Mozilla 1.3b, full installer, complete install,
no Fast Start. I can reproduce the hang reliably. I left the hanging Mozilla
open for 130 minutes - the hang persisted (total CPU 5 sec) and I had to kill
Mozilla via Windows. I have not yet found a way to produce a crash report in
this situation.
Comment 48•22 years ago
|
||
to me it seems to happen only with releases ... as long as im using trunk builds
i havent seen it on win2k for a long time. lately trunks were so messy, i
installed 1.2.1 and there it was again ... back to trunk builds, updating every
2-3 days and everything is fine again
Assignee | ||
Comment 49•22 years ago
|
||
I've been poking around mozilla\xpfe\bootstrap source files and ran into
something that might be causing this bug, if not, at least related to this. I
was able to "partially" reproduce this bug. By "partially" I mean that I was
able to cause mozilla to hang when trying to make it (or unmake it) the default
html handler for the OS. It then "unhung" after several seconds.
The related bug I found is bug 53952
Of particular interest is comment #7 in that bug.
Comment 50•22 years ago
|
||
Re: comment 46: is that the right patch?
http://support.microsoft.com/default.aspx?scid=kb;[LN];Q810565
It doesn't mention anything about DDE hangs, just that IE gets your URLs instead
of the default browser.
Comment 51•22 years ago
|
||
Hmm, that's assuming that the patch number is equal to the article number.
Comment 52•22 years ago
|
||
In response to comment #50: Yes, the URL you gave leads to the patch that "makes
XP play nicely with other browsers", which I assume is the patch that the poster
of comment #45 had in mind.
The effect of the patch is supposed to be that various ways of accessing HTML
files use your chosen "default browser" instead of IE. My observation, however,
is that IE is broken when it is not the default handler for HTML files - often,
it offers to "Save to disk" when I klick on a link leading to a simple HTML file.
I do not know whether or not this patch has an effect on the bug, but it
certainly does not make the bug disappear, as stated in comment #45.
Comment 53•22 years ago
|
||
Since it doesn't make the bug disappear, I kinda doubt the patch you're
referring to is the patch Josh Marquis is talking about. Josh, do you have more
information on this?
Comment 54•22 years ago
|
||
ssu asked me to push some bits to test:
http://ftp.mozilla.org/pub/mozilla/nightly/experimental/bug140995/
Assignee | ||
Comment 56•22 years ago
|
||
I've just uploaded a new set of mozilla debug build test bits to the same url
above, but with the following new names:
mozilla-win32-installer-bug140995-no-fix-2.exe
mozilla-win32-installer-bug140995-with-fix-2.exe
notice that they end in '*-2.exe'. They should appear in the next 10 mins if
they're not already there.
Please try the one without the fix first to make sure that the bug is still
reproduceable with it, then try the one with the fix.
Status: NEW → ASSIGNED
Comment 57•22 years ago
|
||
I couldn't find the Microsoft article on the patch...I breezed through my
install logs but didn't recognize any. :( Sorry this didn't work for everyone.
It solves it for me everytime.
Also, the trunk builds DO NOT hang for me even without the system being
patched...odd. I think the poster of <a href="#c49">comment 49</a> is onto
something, even if it's just an odd coicidence.
Assignee | ||
Comment 58•22 years ago
|
||
Since I can't reproduce the exact hang that people are reporting, I don't know
if this patch will fix this bug. However, this bug does fix a very similar
(potential) hang that is described by this bug (mozilla hanging after toggling
the "Alert me if other applications change these settings" checkbox in the
Preferences|Advanced|System dialog and clicking the OK button).
The actual fix is to xpfe/components/winhooks/nsWindowsHooksUtil.cpp.
A test debug build that can verify that this is the problem (but does not have
this exact patch applied) are the files listed in the above comments.
I have an optimized build with this exact patch already built, but I don't have
access to post it to ftp.mozilla.org. I'll have to wait till tomorrow to get
help pushing the bits to the same area.
Comment 59•22 years ago
|
||
In response to comment #56: I could not install
mozilla-win32-installer-bug140995-no-fix-2.exe: during installation, a pop-up
appeared
GRE Setup: SETUP.EXE - Component not found
The application could not be started, because MSVCRTD.dll was not found.
Reinstallation of the application could fix the problem.
Behind that was another pop-up, which disappeared before I could fully copy it:
Error: could not load <long path>\xpistub.dll
I do not have a Microsoft compiler installed on my machine.
Comment 60•22 years ago
|
||
Oliver: there are optimized (non-debug) versions with the same fix available
from here:
ftp://ftp.mozilla.org/pub/mozilla/nightly/experimental/bug140995a/
I guess whoever was uploading them to mozilla.org for ssu didn't get his request
in time yesterday, so I asked Daa to upload them, but he couldn't write to the
original directory, so he added the directory bug140995a (in case you were
wondering).
Comment 61•22 years ago
|
||
Re comment #60: Sorry, even the build
bug140995a/mozilla-win32-installer-bug140995-no-fix-opt-3.exe does *not* hang
when I set it to be the default browser in the initial pop-up or under
Properties -> Advanced -> System. Maybe there really is some "release build
magic" as suggested in comment #48 that triggers the bug?
Comment 62•22 years ago
|
||
Hmmm, that's interesting.
I guess we'll have to get a "release" build done and uploaded for testing with
and without patch. Or we could just land the patch (it's highly unlikely that it
makes things worse, and we strongly suspect that it'll help) and see if people
still have this problem with 1.3final.
Assignee | ||
Comment 63•22 years ago
|
||
Comment on attachment 115123 [details] [diff] [review]
patch v1.0
seeking reviews in case we decide to land this patch.
Attachment #115123 -
Flags: superreview?(jaggernaut)
Attachment #115123 -
Flags: review?(sgehani)
Comment 64•22 years ago
|
||
Comment on attachment 115123 [details] [diff] [review]
patch v1.0
sr=jag
These fixes are the right thing to do regardless, but we strongly suspect they
address this bug. Requesting a=.
Attachment #115123 -
Flags: superreview?(jaggernaut)
Attachment #115123 -
Flags: superreview+
Attachment #115123 -
Flags: approval1.3?
Comment 65•22 years ago
|
||
Comment on attachment 115123 [details] [diff] [review]
patch v1.0
a=asa (on behalf of drivers) for checkin to 1.3
Attachment #115123 -
Flags: approval1.3? → approval1.3+
Assignee | ||
Comment 66•22 years ago
|
||
patch checked in to trunk and 1.3 branch. closing bug as fixed.
I have one other test I just thought of to see if there's any other place that
the given test scenario could possibly cause a hang at. If I find anything
else, I'll reopen this bug and attach another patch.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 67•22 years ago
|
||
*** Bug 194975 has been marked as a duplicate of this bug. ***
Updated•22 years ago
|
Whiteboard: landed1.3
Updated•22 years ago
|
Whiteboard: landed1.3 → fixed1.3
Comment 68•22 years ago
|
||
*** Bug 196891 has been marked as a duplicate of this bug. ***
Comment 70•22 years ago
|
||
I have this bug back with today's build (2003043908)
It looks like the Mozilla home page will never load until an answer is given to
the prompt, but the priority given to the page loading prevents to pick a
choice.
CPU is hang 100%
Win 2000, MS IE 5.01 SP2, all latest patches, except MS IE 6
Comment 71•22 years ago
|
||
I consistently reproduce the bug with today's build also (2003043008), on
Win2000 (but is ok on Win98 2nd Edition and MS IE 5.5).
I have installed additional MS patch for « WM_TIMER Messages May Stop Being
Delivered to Programs in Windows 2000 » http://support.microsoft.com?
kbid=322913 but without any change in the behavior (this is a recommended
patch, not a critical one installed by default).
I have also tested all the builds described in comment #54.
All of them DO work (no freeze, it is possible to choose an option), even
the 'no fix' builds.
I upload the traces I could capture (most of them have errors however, and all
of the time, Mozilla crashes when .quit: isn't it wrong anyway ?)
Version 1.4a doesn't work either
Version 1.3 is OK: this is clearly a regression
Comment 72•22 years ago
|
||
Assignee | ||
Comment 73•22 years ago
|
||
Olivier, what you're running into is not this bug. Please file a new bug.
Comment 74•22 years ago
|
||
i can reproduce this with a firebird nightly now ... shouldnt this fix be in
that branch as well ?
Comment 75•22 years ago
|
||
which branch ?
There is currently no branch (only the 1.0branch but this is AFAIK "closed")
Comment 76•22 years ago
|
||
i thought firebird had been branched already ...
if not, then this bug is back on firebird ;)
Attachment #115123 -
Flags: review?(sgehani)
Comment 77•22 years ago
|
||
*** Bug 196904 has been marked as a duplicate of this bug. ***
Comment 78•21 years ago
|
||
*** Bug 164245 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•