attempting to fix bug 140995 - Freeze after setting as default browser [Win 2000 and XP].  Not sure if this is the real fix since I can't reproduce the problem exactly. sr=jag a=asa