mailnews/mapi/mapihook/src/nsMapiRegistryUtils.cpp
@@ -56,6 +56,8 @@
 #define USERAGENT_VERSION_PREF "general.useragent.misc"
 #define USERAGENT_VERSION_NS_PREF "general.useragent.vendorSub"
 #define USERAGENT_PREF_PREFIX "rv:"
+#define MOZ_HWND_BROADCAST_MSG_TIMEOUT 5000
+#define MOZ_CLIENT_MAIL_KEY "Software\\Clients\\Mail"
 
 nsMapiRegistryUtils::nsMapiRegistryUtils()
 {
@@ -566,8 +568,13 @@ nsresult nsMapiRegistryUtils::setDefaultMailClient()
                                            "Software\\Mozilla\\Desktop", 
                                            "defaultMailHasBeenSet", "1");
         }
-        ::SendMessage(HWND_BROADCAST, WM_SETTINGCHANGE, 0, 
-                     (LPARAM)"Software\\Clients\\Mail");
+        ::SendMessageTimeout( HWND_BROADCAST,
+                              WM_SETTINGCHANGE,
+                              0,
+                              (LPARAM)MOZ_CLIENT_MAIL_KEY,
+                              SMTO_NORMAL|SMTO_ABORTIFHUNG,
+                              MOZ_HWND_BROADCAST_MSG_TIMEOUT,
+                              NULL);
         RegisterServer(CLSID_CMapiImp, "Mozilla MAPI", "MozillaMapi", "MozillaMapi.1");
         return desktopKeySet;
     }
@@ -649,8 +656,13 @@ nsresult nsMapiRegistryUtils::unsetDefaultMailClient() {
                                            "Software\\Mozilla\\Desktop", 
                                            "defaultMailHasBeenSet", "0");
         }
-        ::SendMessage(HWND_BROADCAST, WM_SETTINGCHANGE, 0, 
-                     (LPARAM)"Software\\Clients\\Mail");
+        ::SendMessageTimeout( HWND_BROADCAST,
+                              WM_SETTINGCHANGE,
+                              0,
+                              (LPARAM)MOZ_CLIENT_MAIL_KEY,
+                              SMTO_NORMAL|SMTO_ABORTIFHUNG,
+                              MOZ_HWND_BROADCAST_MSG_TIMEOUT,
+                              NULL);
         UnregisterServer(CLSID_CMapiImp, "MozillaMapi", "MozillaMapi.1");
         return desktopKeySet;
     }
